堆参数配置